--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "appService.preDeployTask": "publish-release",
-    "appService.deploySubpath": "bin/Release/net6.0/publish"
+    "appService.deploySubpath": "bin/Release/net6.0/publish",
+    "files.exclude": {
+        "**/bin": true,
+        "**/obj": true
+    }
 }
